<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sCategory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:entries="@array/category" />

        <com.markdevelopers.rakshak.ui.widgets.BaseEditText
            android:id="@+id/etDescription"
            style="@style/BaseEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:height="150dp"
            android:gravity="start"
            android:hint="@string/description" />

        <com.markdevelopers.rakshak.ui.widgets.BaseTextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/plus" />

        <com.markdevelopers.rakshak.ui.widgets.BaseTextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload_image" />

        <FrameLayout
            android:id="@+id/fImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginTop="16dp" />

            <ImageView
                android:id="@+id/ivCloseButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="top|right"
                android:clickable="true"
                android:src="@drawable/close_button" />

        </FrameLayout>

        <com.markdevelopers.rakshak.ui.widgets.BaseButton
            android:id="@+id/bSubmit"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>